[project]
name = "collegeboard-qbank-api"
version = "0.1.0"
description = "A wrapper for pythonically interacting with CollegeBoard's internal question bank API."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "tzdata>=2026.3",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
    "ty>=0.0.59",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-m \"not integration\""
norecursedirs = [
    ".pytest_cache",
    "pytest-cache-files-*",
]
markers = [
    "integration: live CollegeBoard API integration tests (excluded by default; run with `-m integration`)",
]

[tool.ty.src]
exclude = ["tests/"]
